fix: remove 'gap' property for better alignment on radio buttons/checkbox

--- a/css/style.scss
+++ b/css/style.scss
@@ -137,7 +137,6 @@ form {
 }
 .types-box {
   display: flex;
-  gap: 3rem;
 }
 .types-opts {
   display: flex;
